# xai-loan-approval-v1

./: .gitignore  LICENSE  PROJECT_SPEC.md  README.md  pyproject.toml  requirements.txt
app/: field_specs.py  streamlit_app.py
data/: README.md  download_data.py
scripts/: generate_report_assets.py  train_all.py
src/xai_loan/: __init__.py
src/xai_loan/data/: __init__.py  feature_labels.py  loader.py  preprocessor.py
src/xai_loan/explainers/: __init__.py  counterfactual.py  lime_explainer.py  narrative.py  shap_explainer.py
src/xai_loan/fairness/: __init__.py  audit.py
src/xai_loan/trust/: __init__.py  score.py
src/xai_loan/utils/: config.py
tests/: test_counterfactual.py  test_explainers.py  test_fairness.py  test_feature_labels.py  test_loader.py  test_models.py  test_narrative.py  test_preprocessor.py  test_trust_score.py
