[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xai-loan-approval"
version = "0.1.0"
description = "An explainable AI framework for transparent loan approval"
requires-python = ">=3.11,<3.12"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
